k8s/api.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: gupi/api:v1.0.0
          ports:
            - name: http
              containerPort: 5000
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: api

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - host: "*.eu-west-1.elb.amazonaws.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: http
