k8s/traefikv2.yml
# RBAC
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-sa
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefikv17
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
spec:
  rules:
  - host: "*.eu-west-1.elb.amazonaws.com"
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: traefik-service
          servicePort: dashboard
